# feyndraw

./: .gitignore  README.md  examples.py  examples2.py  pyproject.toml
feyndraw/: __init__.py  basicdraw.py  geometry.py  loops.py  propagators.py  vertices.py
src/feyndraw/: __init__.py  basicdraw.py  geometry.py  propagators.py
tests/: examples.py
