[build-system]
requires = ["hatchling >= 1.26"]
build-backend = "hatchling.build"

[project]
name = "feyndraw"
version = "1.0.2"
dependencies = [
    "matplotlib",
    "numpy"
]
requires-python = ">= 3.0"
authors = [
    { name = "Hugo Schérer", email = "hugo.scherer@mail.mcgill.ca" }
]
description = "Drawing Feynman diagrams with matplotlib"
readme = "README.md"
license = "MIT"
license-files = ["LICEN[CS]E.*"]
keywords = ["Feynman", "diagram", "draw", "physics", "particle"]
classifiers = [
  "Programming Language :: Python :: 3",
  "Operating System :: OS Independent",
]

[project.urls]
Repository = "https://github.com/schhug/feyndraw"
